Match stop button min-width to schedule button on mobile (40px)

--- a/src/components/TimeTracker.css
+++ b/src/components/TimeTracker.css
@@ -738,7 +738,7 @@
   }
 
   .stop-main {
-    min-width: 70px;
+    min-width: 40px;
     min-height: 40px;
   }
 
